Fix some responsive issues on small screens

--- a/structure.css
+++ b/structure.css
@@ -9,3 +9,9 @@ input[type=text], textarea {
 label {
     display: block !important;
 }
+
+@media (max-width: 480px) { 
+    .card-header, .card-body {
+        padding: 0.75rem 1rem;
+    }
+ }
